--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun run index.ts"
+    "dev": "wrangler dev index.ts",
+    "deploy": "wrangler deploy --minify index.ts"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20230904.0",
     "@types/figlet": "^1.5.6",
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "wrangler": "^3.7.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "figlet": "^1.6.0"
+    "figlet": "^1.6.0",
+    "hono": "^3.5.8"
   }
 }
